--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.860ec699.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.ff6604eb.js">
-    <link rel="stylesheet" href="/assets/index.16c4fe9c.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    
-  </body>
-</html>
+<!doctype html><html lang=en><head><meta charset=UTF-8 /><link rel=icon href=/favicon.ico /><meta name=viewport content="width=device-width,initial-scale=1"/><title>Vite App production</title><script type=module crossorigin src=/assets/index.2b93c197.js></script><link rel=modulepreload href=/assets/vendor.be51149b.js><link rel=stylesheet href=/assets/index.7a13b140.css><link rel=manifest href=/manifest.webmanifest></head><body><div id=app></div></body></html>
